--- a/src/i18n/translations/ar/cta.json
+++ b/src/i18n/translations/ar/cta.json
@@ -1,6 +1,6 @@
 {
-  "heading": "كل ثانية تنتظر، شخص آخر يأخذ مكانك في الضوء",
-  "subheading": "دعنا نبتكر شيئاً لا يُنسى—ابدأ الآن",
-  "getStarted": "ابدأ الآن",
-  "viewServices": "عرض الخدمات"
+  "heading": "خدمات احترافية لإصلاح الأخطاء البرمجية للشركات والمطورين",
+  "subheading": "حلول سريعة وموثوقة لحل مشاكل البرمجيات والحفاظ على تطبيقاتك تعمل بسلاسة",
+  "getStarted": "أصلح أخطاءك البرمجية الآن",
+  "viewServices": "عملية إصلاح الأخطاء لدينا"
 }
