--- a/src/i18n/translations/ar/faq.json
+++ b/src/i18n/translations/ar/faq.json
@@ -1,27 +1,31 @@
 {
   "badge": "الأسئلة الشائعة",
   "title": "الأسئلة المتكررة",
-  "description": "اعثر على إجابات للأسئلة الشائعة حول خدماتنا وعملياتنا",
+  "description": "اعثر على إجابات للأسئلة الشائعة حول خدمات إصلاح الأخطاء البرمجية لدينا",
   "faqs": [
     {
-      "question": "ما هي الخدمات التي تقدمها فيب لابز؟",
-      "answer": "تقدم فيب لابز خدمات شاملة لتطوير المواقع الإلكترونية تشمل تصميم المواقع المخصصة، وحلول التجارة الإلكترونية، وتحسين محركات البحث، وتطوير المواقع متعددة اللغات، واستراتيجيات التسويق الرقمي المصممة خصيصاً لاحتياجات عملك."
+      "question": "ما هي أنواع الأخطاء البرمجية التي تقومون بإصلاحها؟",
+      "answer": "نحن نصلح مجموعة واسعة من الأخطاء البرمجية بما في ذلك أخطاء وظيفية، مشاكل التوافق، مشاكل الأداء، مشاكل واجهة المستخدم، الثغرات الأمنية، أخطاء قواعد البيانات، مشاكل تكامل واجهة برمجة التطبيقات، ومشاكل التوافق عبر المتصفحات والأنظمة المختلفة للشركات والمطورين الفرديين."
     },
     {
-      "question": "كم من الوقت يستغرق إكمال مشروع الموقع الإلكتروني؟",
-      "answer": "تختلف الجداول الزمنية للمشروع حسب التعقيد والمتطلبات. عادةً، يستغرق الموقع القياسي من 4 إلى 8 أسابيع من المفهوم إلى الإطلاق. سنقدم لك جدولاً زمنياً مفصلاً خلال استشارتنا الأولية."
+      "question": "ما هي سرعة حل مشاكل البرمجيات الخاصة بي؟",
+      "answer": "تعتمد مدة الاستجابة على تعقيد الخطأ البرمجي. عادة ما يتم حل المشاكل البسيطة خلال 24-48 ساعة، بينما قد تستغرق المشاكل الأكثر تعقيدًا 3-5 أيام عمل. للإصلاحات العاجلة، نقدم خدمة ذات أولوية مع أوقات حل أسرع."
     },
     {
-      "question": "هل تقدمون دعماً مستمراً بعد إطلاق الموقع؟",
-      "answer": "نعم، نقدم حزم دعم وصيانة شاملة بعد الإطلاق. يتضمن ذلك التحديثات المنتظمة، ومراقبة الأمان، وتحسين الأداء، والدعم التقني لضمان عمل موقعك بسلاسة."
+      "question": "ما هي عملية إصلاح الأخطاء البرمجية لديكم؟",
+      "answer": "تتضمن عمليتنا: 1) تحديد وتحليل الخطأ، 2) إعادة إنتاج المشكلة في بيئة الاختبار لدينا، 3) تحليل السبب الجذري، 4) تطوير الحل واختباره، 5) تنفيذ الحل، و 6) التحقق بعد الإصلاح للتأكد من حل المشكلة بشكل كامل."
     },
     {
-      "question": "كيف تضمنون أن تكون المواقع متوافقة مع محركات البحث؟",
-      "answer": "نقوم بتطبيق أفضل ممارسات تحسين محركات البحث خلال التطوير، بما في ذلك هيكل الكود المحسن، وسرعة التحميل، والتجاوب مع الأجهزة المحمولة، والعلامات الوصفية المناسبة. كما نقدم إرشادات حول تحسين المحتوى واستراتيجية الكلمات المفتاحية."
+      "question": "هل تقدمون ضمانات على إصلاحاتكم للأخطاء البرمجية؟",
+      "answer": "نعم، جميع إصلاحاتنا للأخطاء البرمجية تأتي مع ضمان لمدة 30 يومًا. إذا تكررت نفس المشكلة خلال هذه الفترة، سنقوم بإصلاحها دون تكلفة إضافية. كما نوفر توثيقًا مفصلاً للإصلاحات المنفذة للمساعدة في منع المشاكل المستقبلية."
     },
     {
-      "question": "هل يمكنكم المساعدة في تطوير موقع متعدد اللغات؟",
-      "answer": "بالتأكيد! نحن متخصصون في إنشاء مواقع متعددة اللغات تصل بفعالية إلى الجمهور العالمي. نقوم بتنفيذ التبديل المناسب للغات، وترجمة المحتوى، والتكيف الثقافي لضمان تفاعل موقعك مع المستخدمين في جميع أنحاء العالم."
+      "question": "هل يمكنكم إصلاح الأخطاء البرمجية في أي لغة برمجة أو إطار عمل؟",
+      "answer": "لدينا خبرة في إصلاح الأخطاء عبر لغات وأطر عمل متعددة بما في ذلك جافا سكريبت، بايثون، PHP، جافا، C#، روبي، رياكت، أنجولار، Vue.js، لارافيل، دجانجو، والعديد من الأخرى. يمكن لفريقنا من المطورين المتخصصين التعامل مع الأخطاء في معظم بيئات التطوير الحديثة."
+    },
+    {
+      "question": "كيف يمكنني تقديم خطأ برمجي لكم لإصلاحه؟",
+      "answer": "يمكنك تقديم الأخطاء البرمجية من خلال بوابتنا عبر الإنترنت، حيث ستقدم تفاصيل حول المشكلة، وخطوات لإعادة إنتاجها، ومقتطفات الكود ذات الصلة أو رسائل الخطأ. للمشاريع الأكبر، نقدم خدمة مراجعة شاملة للكود لتحديد وإصلاح الأخطاء المتعددة في وقت واحد."
     }
   ]
 }
