--- a/src/i18n/translations/ar/footer.json
+++ b/src/i18n/translations/ar/footer.json
@@ -1,13 +1,46 @@
 {
-  "companyDescription": "نحول الأفكار إلى تجارب رقمية استثنائية. نصمم حلولاً مبتكرة تدفع نمو الأعمال.",
+  "companyDescription": "تتخصص VebLabs في إصلاح الأخطاء البرمجية والحلول التقنية للشركات والمطورين. مع سرعة الإنجاز وضمان الإصلاحات، نساعدك في الحفاظ على برمجيات مستقرة وعالية الأداء.",
+  "quickLinks": {
+    "title": "روابط سريعة",
+    "links": [
+      {
+        "name": "خدمات إصلاح الأخطاء",
+        "url": "/services"
+      },
+      {
+        "name": "قصص النجاح",
+        "url": "/works"
+      },
+      {
+        "name": "المدونة التقنية",
+        "url": "/blog"
+      },
+      {
+        "name": "احصل على الدعم",
+        "url": "/get-in-touch"
+      }
+    ]
+  },
+  "services": {
+    "title": "خدماتنا",
+    "list": [
+      "إصلاح الأخطاء الطارئة",
+      "تحسين الأداء",
+      "مراجعة وتدقيق الكود",
+      "الاستشارات التقنية"
+    ]
+  },
   "contact": {
     "title": "اتصل بنا",
-    "readyToStart": "مستعد لبدء مشروعك القادم؟",
+    "readyToStart": "هل أنت مستعد لإصلاح الأخطاء البرمجية؟",
     "benefits": {
-      "consultation": "استشارة أولية مجانية",
-      "response": "وقت استجابة سريع",
-      "manager": "مدير مشروع مخصص"
-    }
+      "consultation": "تقييم أولي مجاني",
+      "response": "دعم طوارئ على مدار الساعة",
+      "manager": "قائد تقني مخصص"
+    },
+    "address": "دبي، الإمارات العربية المتحدة",
+    "email": "support@veblabs.com",
+    "phone": "+971 50 123 4567"
   },
   "support": {
     "title": "الدعم",
@@ -17,12 +50,12 @@
         "description": "مساعدة خبراء على مدار الساعة"
       },
       {
-        "name": "استفسارات المشاريع",
-        "description": "ابدأ مشروعك معنا"
+        "name": "تقارير الأخطاء",
+        "description": "تقديم ومتابعة المشكلات"
       },
       {
         "name": "بوابة العملاء",
-        "description": "الوصول إلى لوحة تحكم مشروعك"
+        "description": "متابعة تقدم الإصلاحات"
       }
     ],
     "businessHours": {
@@ -31,24 +64,34 @@
       "weekend": "الجمعة-الأحد: 9:00 صباحاً - 5:00 مساءً"
     }
   },
-  "quickLinks": {
-    "title": "روابط سريعة",
+  "social": {
+    "title": "تابعنا",
     "links": [
-      { "name": "الرئيسية", "url": "" },
-      { "name": "أعمالنا", "url": "works" },
-      { "name": "المدونة", "url": "blog" },
-      { "name": "خدماتنا", "url": "services" },
-      { "name": "اتصل بنا", "url": "get-in-touch" }
+      {
+        "text": "لينكد إن",
+        "url": "https://linkedin.com/company/veblabs"
+      },
+      {
+        "text": "جيت هب",
+        "url": "https://github.com/veblabs"
+      },
+      {
+        "text": "تويتر",
+        "url": "https://twitter.com/veblabs"
+      }
     ]
   },
-  "services": {
-    "title": "خدماتنا",
-    "list": [
-      "تطوير الويب",
-      "تطبيقات الجوال",
-      "تصميم واجهة المستخدم",
-      "التسويق الرقمي"
+  "copyright": " 2025 VebLabs. جميع الحقوق محفوظة.",
+  "policy": {
+    "links": [
+      {
+        "text": "سياسة الخصوصية",
+        "url": "/privacy"
+      },
+      {
+        "text": "شروط الخدمة",
+        "url": "/terms"
+      }
     ]
-  },
-  "copyright": "جميع الحقوق محفوظة."
+  }
 }
