--- a/src/i18n/translations/ar/hero.json
+++ b/src/i18n/translations/ar/hero.json
@@ -1,123 +1,106 @@
 {
   "mainHeading": {
-    "part1": "اكتشف إمكانات عملك",
-    "part2": "الكامنة على الإنترنت"
+    "part1": "أصلح الكود البرمجي",
+    "part2": "استعد مسار مشروعك بسرعة"
   },
-  "subtitle": "نقوم ببناء مواقع إلكترونية سريعة ومحسنة لمحركات البحث تحول الزوار إلى عملاء. حلولنا المدعومة بالذكاء الاصطناعي تدعم لغات متعددة وتقدم أداءً استثنائياً لتعظيم عائد استثمارك",
+  "subtitle": "نحل الأخطاء البرمجية الحرجة ومشاكل الكود خلال 24 ساعة. يقوم مطورونا الخبراء باستكشاف المشاكل وإصلاحها عبر جميع الأطر والتقنيات لإعادة مشاريعك إلى المسار الصحيح بأقل وقت توقف ممكن.",
   "cta": {
-    "primary": "احصل على عرض سعر مجاني",
-    "secondary": "تصفح أعمالنا"
+    "primary": "احصل على تشخيص مجاني",
+    "secondary": "تعرف على آلية عملنا"
   },
-  "noUpfrontCost": "لا توجد تكاليف مقدمة - ادفع فقط عندما ترى موقعك قيد التشغيل",
+  "noUpfrontCost": "✨ تشخيص أولي مجاني - ادفع فقط عندما يتم إصلاح الكود الخاص بك",
   "features": {
     "seo": {
-      "title": "تحسين محركات البحث",
-      "description": "عزز ظهورك على الإنترنت مع حلولنا المحسنة لمحركات البحث"
+      "title": "جميع التقنيات",
+      "description": "دعم لأي إطار عمل أو لغة برمجة"
     },
     "speed": {
-      "title": "سرعة فائقة",
-      "description": "استمتع بأداء وسرعة تحميل عالية"
+      "title": "إصلاح خلال 24 ساعة",
+      "description": "حلول سريعة للمشاكل البرمجية"
     },
     "customization": {
-      "title": "قابل للتخصيص بالكامل",
-      "description": "خصص كل جانب ليتناسب مع علامتك التجارية بشكل مثالي"
+      "title": "لا إصلاح، لا رسوم",
+      "description": "ادفع فقط مقابل الحلول الناجحة"
     },
     "multilingual": {
-      "title": "دعم متعدد اللغات",
-      "description": "الوصول إلى جمهور عالمي مع إمكانيات متعددة اللغات"
+      "title": "مطورون خبراء",
+      "description": "خبرة عالية في استكشاف الأخطاء وإصلاحها"
     }
   },
-  "trust": "موثوق به من قبل رواد الأعمال والشركات الناشئة حول العالم",
-  "verticalTabs": {
-    "title": "نحن نبني تجارب رقمية مذهلة",
-    "subtitle": "نحن نجمع بين التصميم والتكنولوجيا لإنشاء منتجات رقمية مبتكرة",
-    "cta": "ابدأ مشروعك",
-    "tabs": {
-      "datadriven": "تصميم مدفوع بالبيانات",
-      "seamless": "تجربة سلسة",
-      "custom": "حلول مخصصة",
-      "multilanguage": "دعم متعدد اللغات"
-    },
-    "tabContent": {
-      "datadriven": "نستخدم البيانات والتحليلات لتوجيه قراراتنا في التصميم وتحسين تجربة المستخدم",
-      "seamless": "نقدم تجربة سلسة عبر جميع الأجهزة والمنصات",
-      "custom": "نطور حلولاً مخصصة تلبي احتياجاتك الفريدة",
-      "multilanguage": "نوفر دعماً كاملاً للغات المتعددة، بما في ذلك اللغة العربية"
-    }
-  },
+  "trust": "موثوق به من قبل المطورين والشركات الناشئة والأعمال حول العالم",
   "verticalTab": {
-    "title": "ما يميزنا",
-    "description": "في فيب لابز، نحن لا نبني مواقع ويب فحسب - بل نقدم حلولاً مصممة لمساعدة عملك على الازدهار. إليك ما يميزنا.",
+    "title": "لماذا نحن فريقك لحالات طوارئ الكود",
+    "description": "في فيب لابز، نحن لا نصلح الأخطاء فحسب - بل نقدم حلولاً كاملة لإعادة مشاريعك إلى المسار الصحيح. إليك ما يميزنا.",
     "tabs": {
-      "datadriven": "تصميم مدفوع بالبيانات",
-      "seamless": "تجربة سلسة",
-      "custom": "حلول مخصصة",
-      "multilanguage": "دعم متعدد اللغات"
+      "datadriven": "دقة التشخيص",
+      "seamless": "استجابة سريعة",
+      "custom": "خبرة متعددة المنصات",
+      "multilanguage": "توثيق كامل"
     },
     "tabContent": {
-      "datadriven": "نمزج الإبداع مع التحليلات لإنشاء مواقع ويب لا تبدو مذهلة فحسب، بل تؤدي بشكل استثنائي. كل قرار تصميم مدعوم ببيانات سلوك المستخدم وأفضل الممارسات في الصناعة.",
-      "datadrivenWhy": "التصميم المدفوع بالبيانات يضمن أن موقعك لا يجذب الانتباه فحسب، بل يحول الزوار إلى عملاء بفعالية.",
-      "seamless": "نحن نعطي الأولوية للتنقل البديهي وأوقات التحميل السريعة والتصميمات المتجاوبة لتقديم تجربة استثنائية عبر الأجهزة. يبقى الزوار لفترة أطول ويستكشفون بعمق ويثقون بعلامتك التجارية.",
-      "seamlessWhy": "تجربة المستخدم السلسة تبني الثقة والمصداقية، مما يقلل معدلات الارتداد ويزيد من معدلات التحويل لعملك.",
-      "custom": "نأخذ الوقت الكافي لفهم أهداف عملك الفريدة وصناعتك وجمهورك المستهدف. كل موقع ويب نقوم بإنشائه مصمم خصيصاً ليعكس علامتك التجارية ويدفع النمو القابل للقياس.",
-      "customWhy": "الحلول المخصصة تضمن أن موقعك يتوافق تماماً مع هوية علامتك التجارية ويساعد في تحقيق أهداف عملك.",
-      "multilanguage": "الوصول إلى جمهور عالمي بسهولة من خلال مواقع الويب التي تدعم لغات متعددة. نقوم بتنفيذ تبديل سلس للغة، مما يضمن شعور كل زائر بأنه في المنزل.",
-      "multilanguageWhy": "توسيع نطاق وصول موقعك من خلال دعم اللغات المتعددة يعزز مشاركة المستخدم ويبني الثقة عبر الأسواق المتنوعة."
+      "datadriven": "نطبق منهجيات منظمة لتحديد الأسباب الجذرية بسرعة. تعمل عملية التشخيص لدينا على تحديد المشكلات بدقة، مما يسمح بإصلاحات مستهدفة وفعالة بدلاً من الحلول المؤقتة.",
+      "datadrivenWhy": "التشخيص الدقيق يعني أننا نصلح المشكلة الفعلية، وليس فقط الأعراض، مما يمنع تكرار حدوث المشكلات.",
+      "seamless": "عندما يتعطل الكود الخاص بك، كل دقيقة مهمة. يستجيب فريقنا في غضون ساعات، وليس أيام، ويعمل بكفاءة لتنفيذ حلول تعيد مشروعك للعمل بسرعة.",
+      "seamlessWhy": "أوقات الاستجابة السريعة تقلل من فترات التوقف، وتقلل من خسارة الإيرادات، وتحافظ على جدول مشروعك في المسار الصحيح.",
+      "custom": "من رياكت إلى بايثون، من iOS إلى أندرويد، لدينا خبراء في جميع الأطر والتقنيات الرئيسية. بغض النظر عن التكنولوجيا التي تستخدمها، لدينا الخبرة لحل مشاكلك المحددة.",
+      "customWhy": "الخبرة متعددة المنصات تضمن قدرتنا على معالجة أي مشكلة تقنية بغض النظر عن اختياراتك التكنولوجية.",
+      "multilanguage": "نقدم توثيقًا كاملاً مع كل إصلاح، موضحين ما الذي حدث بشكل خاطئ، وكيف قمنا بإصلاحه، وتوصيات لمنع حدوث مشاكل مماثلة في المستقبل.",
+      "multilanguageWhy": "التوثيق المفصل يساعد فريقك على فهم الحل والتعلم من العملية، مما يحسن جودة الكود على المدى الطويل."
     },
     "whyItMatters": "لماذا هذا مهم: "
   },
   "services": {
-    "heading": "مواقع حديثة تعمل أثناء نومك",
-    "description": "نقوم ببناء مواقع سريعة ومحسنة لمحركات البحث يحبها جوجل. على عكس الوكالات التقليدية العالقة بالتقنيات القديمة، تصميماتنا المتوافقة مع الأجهزة المحمولة مصممة للأداء وتحقيق الإيرادات على مدار الساعة. نجاحك يعمل تلقائياً.",
-    "startProject": "ابدأ مشروعك",
-    "viewWork": "شاهد أعمالنا"
+    "heading": "حلول برمجية تفتح مسار تقدمك",
+    "description": "نقوم بإصلاح الأخطاء البرمجية الحرجة والمشاكل التقنية التي تعيق مشاريعك. على عكس المطورين العموميين، يتخصص فريقنا في تشخيص المشاكل بسرعة وحلها بكفاءة. سواء كانت مشاكل واجهة أمامية، أو خلفية، أو تطبيقات جوال، لدينا الخبرة اللازمة لتخطي العقبات والمضي قدمًا.",
+    "startProject": "اطلب تشخيصًا مجانيًا",
+    "viewWork": "استعرض حلولنا"
   },
   "pricing": {
-    "title": "أسعار بسيطة وشفافة",
-    "subtitle": "اختر الخطة المثالية لاحتياجات عملك",
+    "title": "تسعير شفاف قائم على القيمة",
+    "subtitle": "ادفع فقط مقابل الحلول الناجحة لمشاكل الكود",
     "basic": {
-      "name": "أساسي",
-      "price": "٤,٩٩٩ درهم",
-      "usdPrice": "١,٣٦٠ دولار",
-      "description": "مثالي للشركات الصغيرة التي تبدأ رحلتها الرقمية",
+      "name": "إصلاح سريع",
+      "price": "٤٩٩ درهم",
+      "usdPrice": "١٣٥ دولار",
+      "description": "للأخطاء البسيطة ومشاكل الكود البسيطة",
       "features": [
-        "موقع إلكتروني حديث ومتجاوب",
-        "تحسين محركات البحث",
-        "٥ صفحات",
-        "نموذج اتصال",
-        "تكامل وسائل التواصل الاجتماعي",
-        "دعم لمدة ٣ أشهر"
+        "حل خطأ برمجي واحد",
+        "إنجاز خلال 24 ساعة",
+        "توثيق الحل",
+        "ضمان لمدة 30 يومًا",
+        "تحسين الكود",
+        "دعم لمدة أسبوع واحد"
       ]
     },
     "professional": {
-      "name": "احترافي",
-      "price": "٩,٩٩٩ درهم",
-      "usdPrice": "٢,٧٢٠ دولار",
-      "description": "مثالي للشركات النامية التي تحتاج إلى المزيد من الميزات",
+      "name": "حل معقد",
+      "price": "١,٩٩٩ درهم",
+      "usdPrice": "٥٤٥ دولار",
+      "description": "للأخطاء الصعبة التي تؤثر على ميزات متعددة",
       "features": [
-        "كل ما في الباقة الأساسية",
-        "تصميم مخصص",
-        "١٠ صفحات",
-        "تكامل المدونة",
-        "إعداد التحليلات",
-        "دعم لمدة ٦ أشهر",
-        "تحسين الأداء"
+        "كل ما يشمله الإصلاح السريع",
+        "حل أخطاء متعددة",
+        "تحليل السبب الجذري",
+        "تحسين الأداء",
+        "تطبيق أفضل الممارسات",
+        "دعم لمدة أسبوعين",
+        "جلسة تسليم للمطور"
       ]
     },
     "enterprise": {
-      "name": "مؤسسات",
+      "name": "إنقاذ المشروع",
       "price": "اتصل بنا",
-      "description": "حلول مخصصة للمؤسسات الكبيرة",
+      "description": "للمشاريع الحرجة ذات المشاكل المتعددة",
       "features": [
-        "كل ما في الباقة الاحترافية",
-        "ميزات مخصصة",
-        "صفحات غير محدودة",
-        "أمان متقدم",
+        "كل ما يشمله الحل المعقد",
+        "مراجعة شاملة لقاعدة الكود",
+        "تحسينات الهيكلة",
         "دعم ذو أولوية",
-        "تكاملات مخصصة",
-        "جلسات تدريبية"
+        "تقليل الديون التقنية",
+        "خيارات دعم ممتدة",
+        "تدريب المطورين"
       ]
     },
-    "cta": "ابدأ الآن"
+    "cta": "احصل على تشخيص مجاني"
   }
 }
