--- a/src/i18n/translations/en/cta.json
+++ b/src/i18n/translations/en/cta.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Every second you wait, someone else is taking your spotlight",
-  "subheading": "Let's create something unforgettable—starting now.",
-  "getStarted": "Get Started",
-  "viewServices": "View Services"
+  "heading": "Professional Bug Fixing Services for Businesses & Developers",
+  "subheading": "Fast, reliable solutions to resolve your software issues and keep your applications running smoothly",
+  "getStarted": "Fix Your Bugs Now",
+  "viewServices": "Our Bug Fixing Process"
 }
