--- a/src/i18n/translations/en/multilanguage.json
+++ b/src/i18n/translations/en/multilanguage.json
@@ -1,5 +1,5 @@
 {
-  "badge": "Multilingual Support",
-  "title": "Creating Multilingual Websites for a Global Audience",
-  "description": "We specialize in designing websites that speak your customers' language, literally. With our multilingual support, reach audiences across different cultures and regions."
+  "badge": "Technology Stack",
+  "title": "Full-Stack Development Expertise",
+  "description": "From front-end frameworks to back-end solutions, we work with all major technologies to deliver robust solutions for your projects."
 }
