--- a/src/i18n/translations/ar/multilanguage.json
+++ b/src/i18n/translations/ar/multilanguage.json
@@ -1,5 +1,5 @@
 {
-  "badge": "دعم متعدد اللغات",
-  "title": "إنشاء مواقع متعددة اللغات لجمهور عالمي",
-  "description": "نحن متخصصون في تصميم مواقع تتحدث لغة عملائك، حرفياً. مع دعمنا متعدد اللغات، يمكنك الوصول إلى الجماهير عبر مختلف الثقافات والمناطق."
+  "badge": "مجموعة التقنيات",
+  "title": "خبرة في التطوير المتكامل",
+  "description": "من إطارات عمل الواجهة الأمامية إلى حلول الخلفية، نعمل مع جميع التقنيات الرئيسية لتقديم حلول قوية لمشاريعك."
 }
